# jQMC

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  api_reference_cli.html  api_reference_cli_tool.html  changelog.html  citation.html  examples.html  genindex.html  index.html  input_jqmc.html  install.html  jqmc.html  modules.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: api_reference_cli.doctree  api_reference_cli_tool.doctree  changelog.doctree  citation.doctree  environment.pickle  examples.doctree  index.doctree  input_jqmc.doctree  install.doctree  jqmc.doctree  modules.doctree  overview.doctree  reference.doctree
_sources/: changelog.md  examples.md  index.md  jqmc.rst  modules.rst  overview.md
_static/: documentation_options.js
api_reference_mod/: jqmc.html  jqmc_workflow.html  jqmc_workflow.template.html  modules.html
benchmarks/: benchmark_gfmc_kernels.py  benchmark_gfmc_tmove_components.py  benchmark_jastrow.py  benchmark_kinetic_energy.py  benchmark_mcmc_components.py  benchmark_mcmc_kernels.py  benchmark_projection_n_hotspots.py  benchmark_ratio_determinant.py  benchmark_ratio_jastrow.py  profile_bottleneck.py
doc/: Makefile  README.md  UML.pu  api_reference_cli.md  api_reference_cli_tool.md  changelog.md  citation.md  conf.py  examples.md  index.md  input_jqmc.md  reference.md  workflows.key
examples/: README.md
jqmc/: _checkpoint.py  _header_footer.py  _jqmc_utility.py  _precision.py  _setting.py  atomic_orbital.py  coulomb_potential.py  coulomb_potential_bak.py  determinant.py  function_collections.py  hamiltonians.py  jastrow_factor.py  jqmc_cli.py  jqmc_gfmc.py  jqmc_kernel.py  jqmc_mcmc.py  jqmc_miscs.py  jqmc_tool.py  jqmc_utility.py  lrdmc.py  lrdmc_serial.py  lrdmc_vectorized.py  lrdmc_vectorized_fixed_projection_time.py  molecular_orbital.py  qmc_vectorized.py  setting.py  structure.py  swct.py  trexio_wrapper.py  units.py  vmc.py  vmc_serial.py  vmc_vectorized.py  vmcopt.py  wavefunction.py
jqmc_workflow/: __init__.py  _cli.py  _config.py  _error_estimator.py  _header_footer.py  _input_generator.py  _job.py  _lrdmc_calibration.py  _machine.py  _output_parser.py  _phase.py  _results.py  _setting.py  _state.py  _transfer.py  launcher.py  lrdmc_ext_workflow.py  lrdmc_workflow.py  mcmc_workflow.py  vmc_workflow.py  wf_workflow.py  workflow.py
myqmc/: _version.py  atomic_orbital.py  bare_coulomb_potential.py  coulomb_potential.py  determinant.py  effective_core_potential.py  function_collections.py  hamiltonians.py  jastrow_factor.py  laplacians.py  molecular_orbital.py  pseudo_jax_code.py  pseudo_jax_code_1.py  pseudo_jax_code_2.py  structure.py  swct.py  trexio_wrapper.py  vmc.py  wavefunction.py
notes/: ao.html  atomic-forces.html  jax.html  lrdmc.html  technical_notes.html  trexio.html  vmc.html  vmcopt.html  wavefunction.html  workflows.html
prototypes/: benchmark_jax_code_1.py  benchmark_jax_code_AOs.py  benchmark_jax_code_GTOs.py  benchmark_jax_code_MOs.py  benchmark_jax_code_coulomb.py  benchmark_jax_code_discretized_kinetic_part.py  benchmark_jax_code_geminal.py  benchmark_jax_code_kinetic_energy.py  benchmark_jax_code_local_energy.py  benchmark_jax_code_simple_funs.py  hamiltonian_data.chk  hamiltonian_data_water.chk  pseudo_jax_code_2.py  vmc_vmap.py  water_ccpvtz_trexio.hdf5
tests/: conftest.py  orbitals_test.py  test_AOs.py  test_AOs_MOs.py  test_MOs.py  test_ao_basis_optimization.py  test_checkpoint_components.py  test_checkpoint_gfmc.py  test_checkpoint_mcmc.py  test_comparison_with_references.py  test_comparison_with_turborvb_AE.py  test_comparison_with_turborvb_ECP.py  test_determinant.py  test_ecps.py  test_force.py  test_force_pressure.py  test_hamiltonian.py  test_init_electron_configurations.py  test_jastrow.py  test_jqmc_command_lines.py  test_jqmc_gfmc_bra.py  test_jqmc_gfmc_tau.py  test_jqmc_mcmc.py  test_jqmc_tool.py  (+11 more)
(+132 files in other folders)
