[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.setuptools_scm]
write_to = "jqmc/_version.py"

[tool.ruff]
line-length = 100
lint.select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
lint.extend-ignore = ["D417", "D100"]
exclude = []

[tool.ruff.lint.pydocstyle]
convention = "google"
