[metadata]
name = jqmc
author = Kosuke Nakano
author_email = kousuke_1123@icloud.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kousuke-nakano/jQMC
project_urls =
    Bug tracker = https://github.com/kousuke-nakano/jQMC/issues
    Documentations = https://jQMC.readthedocs.io/en/latest/
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = jqmc
python_requires = >=3.10.0
install_requires =
    numpy >= 2.1.3
    scipy >= 1.15.1
    jax   <0.8.0,>= 0.7.1
    jaxlib >= 0.7.1
    jaxtyping >= 0.2.38
    flax >= 0.10.2
    optax >= 0.2.5
    mpi4jax >= 0.8.1
    mpi4py >= 4.0.2
    trexio >= 2.6.0
    pytest >= 8.3.5
    pre-commit >= 4.0.2
    setuptools_scm >= 8.1.2
    toml >= 0.10.2
    typer >= 0.15.1
    tomlkit >= 0.13.2
    uncertainties >= 3.2.2
    matplotlib >= 3.10.1

[options.entry_points]
console_scripts =
    jqmc = jqmc.jqmc_cli:cli
    jqmc-tool = jqmc.jqmc_tool:cli
